Generate checksums for kam binaries (#308)

--- a/config/index.html
+++ b/config/index.html
@@ -18,6 +18,9 @@
               <td>Windows</td>
               <td><a href="/kam/kam_windows_amd64.exe">kam_windows_amd64.exe</a></td>
             </tr>
-        </table>             
+        </table>
+        <p>
+            SHA256 checksums for the above binaries <a href="/kam/kam_checksums.txt">kam_checksums</a>
+        </p>           
     </body>
 </html>
