Serve linux/ppc64le and linux/s390x binaries (#312)

--- a/config/index.html
+++ b/config/index.html
@@ -11,8 +11,16 @@
                 <td><a href="/kam/kam_darwin_amd64">kam_darwin_amd64</a></td>
             </tr>
             <tr>
-              <td>Linux</td>
+              <td>Linux on x86_64</td>
               <td><a href="/kam/kam_linux_amd64">kam_linux_amd64</a></td>
+            </tr>
+            <tr>
+              <td>Linux on IBM Power</td>
+              <td><a href="/kam/kam_linux_ppc64le">kam_linux_ppc64le</a></td>
+            </tr>
+            <tr>
+              <td>Linux on IBM Z</td>
+              <td><a href="/kam/kam_linux_s390x">kam_linux_s390x</a></td>
             </tr>
             <tr>
               <td>Windows</td>
